<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_first_coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:hint="@string/text_hint_first_coordinates"
            app:hintTextColor="@color/colorDeepCyan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtText_first_coordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/colorDeepCyan"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorLightGray"
                android:textCursorDrawable="@drawable/color_edttxt_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_second_coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:hint="@string/text_hint_second_coordinates"
            app:hintTextColor="@color/colorDeepCyan"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_first_coordinates">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtText_second_coordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/colorDeepCyan"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorLightGray"
                android:textCursorDrawable="@drawable/color_edttxt_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:background="@drawable/selector_btn_bg_calculate"
            android:enabled="false"
            android:text="@string/text_calculate"
            android:textAllCaps="true"
            android:textColor="@drawable/selector_text_login_calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_second_coordinates" />

        <LinearLayout
            android:id="@+id/length_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:weightSum="2"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_calculate">

            <TextView
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_17sp"
                android:textColor="@android:color/black"
                android:text="@string/text_length"/>

            <TextView
                android:id="@+id/length_text"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_17sp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_mm_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:weightSum="2"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/length_ll">

            <TextView
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_17sp"
                android:textColor="@android:color/black"
                android:text="@string/text_area_mm"/>

            <TextView
                android:id="@+id/area_mm_text"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_17sp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_sq_inches_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:weightSum="2"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/area_mm_ll">

            <TextView
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_17sp"
                android:textColor="@android:color/black"
                android:text="@string/text_area_sq_inches"/>

            <TextView
                android:id="@+id/area_sq_inches_text"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_17sp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/angle_first_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:weightSum="2"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/area_sq_inches_ll">

            <TextView
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_17sp"
                android:textColor="@android:color/black"
                android:text="@string/angle_first"/>

            <TextView
                android:id="@+id/angle_first_text"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_17sp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/angle_second_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:weightSum="2"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/angle_first_ll">

            <TextView
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_17sp"
                android:textColor="@android:color/black"
                android:text="@string/angle_second"/>

            <TextView
                android:id="@+id/angle_second_text"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_17sp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>